# datathon-2026

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
app/: main.py
app/api/routes/: listings.py
app/core/: opensearch.py
app/harness/: search_service.py
app/ingestion/components/: __init__.py  augmenters.py  client.py  logger.py  manager.py  poi_feature.py  utils.py
app/models/: schemas.py  valid_values.py
app/participant/: hard_fact_extraction.py  query_validation.py  ranking.py  soft_fact_extraction.py  soft_filtering.py
app/participant/components/: __init__.py  hard_extractor.py  logger.py  query_validator.py  ranker.py  reranker.py  soft_extractor.py  soft_filter.py  test.py  translator.py  utils.py
app/participant/prompts/: LLMHardFactExtractor.md  LLMQueryValidator.md  LLMReRanker.md  LLMSoftExtractor.md  VLMFeatureAugmenter.md  no_candidates.md
apps_sdk/server/: main.py
configs/: config.yaml  soft_extractor_anchors.yaml  soft_extractor_importance_keywords.yaml
configs/ingestion/: config.yaml  index_body.json  pipeline_body.json
notebooks/: 00_jack.ipynb  00_scratch.ipynb  01_llm_interface.ipynb
scripts/: fix_anchors.py  ingest_opensearch.py
sidechallenges/: aws.txt  claude.txt
tests/: test.py  test_api.py  test_augmenters.py  test_image_augmenter.py  test_llm_reranker.py  test_new_augmenters.py  test_pipeline.py  test_query_validator.py  test_reranker.py  test_soft_extraction.py  test_soft_filters.py
